# fintracker

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/gui/: notif.cpp  notif.h
